# fin_news_pipeline

./: .gitignore  pyproject.toml
src/fin_news_pipeline/: main.py  models.py  utils.py
src/fin_news_pipeline/ingestion/: dowload.py  polling.py
src/fin_news_pipeline/ingestion/providers/: base.py  cnbc.py  yahoo.py
src/fin_news_pipeline/notebooks/: eda.ipynb
src/fin_news_pipeline/processing/: nlp.py
src/fin_news_pipeline/storage/: schema.sql  sqlite_store.py
src/fin_news_pipeline/utils/: sp500_clean.parquet  tickers.py
tests/: conftest.py  test_dataclasses.py
