[tool.poetry]
name = "fin_news_pipeline"
version = "0.1.0"
description = "Financial news ingestion and sentiment pipeline"
authors = ["Alexey Dronov"]
packages = [{ include = "fin_news_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core
requests = "^2.31.0"
feedparser = "^6.0.10"
pandas = "^2.2.0"

# Messaging
kafka-python = "^2.0.2"

# Config
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"

# (Add later when needed)
# transformers = "^4.40.0"
# torch = "^2.2.0"
jupyter = "^1.1.1"
newspaper4k = "^0.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"